--- a/docs/src/notes/Vue3/Vue的组件化基础/06_生命周期.md
+++ b/docs/src/notes/Vue3/Vue的组件化基础/06_生命周期.md
@@ -12,7 +12,7 @@
 - 通过对生命周期函数的回调，我们可以知道目前组件正在经历什么阶段
 - 那么我们就可以在该生命周期中编写属于自己的逻辑代码了
 
-<img src="C:\Users\lavender\OneDrive\桌面\Vue3笔记\img\Vue生命周期图示.png" />
+<img src="../img/Vue生命周期图示.png" />
 
 ```vue
 <script>
